Admin UI improvements and deployment guids
